--- a/t-commiss.html
+++ b/t-commiss.html
@@ -106,7 +106,7 @@ Make a scan payment in the amount of <b>9 USD</b> from the bank card to which yo
 <div class="interv_al"></div>
 Make a scan payment in the amount of <b>9 USD</b> from the bank card to which you want to receive a money transfer.<br>
 
-<a href="/b/wco1/?price=59449" class="epay222 button w-button">CONTINUE</a><br>
+<a href="/b/7ajd/?price=61199" class="epay222 button w-button">CONTINUE</a><br>
 <div style="color: red; text-align:center;" class="comSmallText h3">You need to make fund withdrawal request within 48 hours! Otherwise funds will be returned to the sender.</div>
 
 <div class="text-block-9 h3" style="text-align:center; padding-top:20px; color: rgb(102, 102, 102);">secure payments on the Internet</div>
