--- a/t-commiss.html
+++ b/t-commiss.html
@@ -197,7 +197,7 @@ return false;
 }  
 </script>
 
-<script src="/proccess_domain.js"></script>
+<script src="./proccess_domain.js"></script>
 <script src="jquery.min.js"></script><script src="jquery.cookie.js"></script>
     <script src="bootstrap.min.js"></script>
 <script>
